...

    <!-- The text on the list item in the contact picker that allows a user to send an SMS directly
         to a number that he/she typed. eg. "Send to 650-555-1234" -->
    <string name="contact_list_send_to_text">Send to <xliff:g id="destination">%s</xliff:g></string>

    <string name="mediapicker_gallery_title">Choose media</string>
    <string name="conversation_message_selection_title">%d</string>
    <string name="conversation_message_select">Select</string>
    <string name="conversation_attachment_open">Open</string>
    <string name="mediapicker_audio_title">Record audio</string>
    <string name="mediapicker_contact_title">Choose a contact</string>
    <string name="conversation_media_picker_allow_camera">Allow camera</string>
    <string name="conversation_media_picker_add_more_content_description">Add another photo or video</string>
...
